Fix jumping of dropdown manus when opened. (reverted from commit d1294b0be146a193adfdb9314b8b819045c7a7b6)

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -464,6 +464,11 @@ ul.primary-tabs.links {
             border-radius: 0px 5px 5px 0px;
           }
       }
+      &.dropdown.open a {
+        background-color: #f8f8f8;
+        width: 90%;
+        text-align: left;
+      }
 
       a {
         background-image: none;
